--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,14 @@
   "devDependencies": {
     "eslint-plugin-prettier": "^3.0.0",
     "prettier": "1.16.3",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^3.4.1",
     "terser": "^3.14.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.4.1",
     "connected-react-router": "4.5.0",
     "env-cmd": "^10.1.0",
     "moment": "^2.24.0",
@@ -31,7 +31,7 @@
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.7.0",
     "react-moment": "^0.8.4",
-    "react-particles-js": "^2.5.1",
+    "react-particles-js": "2.5.1",
     "react-redux": "5.1.1",
     "react-router": "4.3.1",
     "react-router-bootstrap": "^0.24.4",
@@ -43,7 +43,7 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "2.3.0",
     "sanitize.css": "7.0.3",
-    "serve": "10.1.1"
+    "serve": "^11.3.0"
   },
   "browserslist": [
     ">0.2%",
